--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "./node_modules/.bin/mocha test/ -R spec --compilers js:babel/register",
     "cover": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha test/ -- -R spec --compilers js:babel/register",
     "lint": "./node_modules/.bin/eslint src/",
-    "bundle": "./node_modules/.bin/browserify "
+    "bundle": "./node_modules/.bin/browserify ./src/Particle.js -t babelify -o ./lib/ParticleBundle.js"
   },
   "repository": {
     "type": "git",
