--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "browser": "lib/ParticleBundle.js",
   "scripts": {
     "prepublish": "npm run lint && npm run compile",
-    "compile": "./node_modules/.bin/babel --optional runtime -sd lib/ src/",
-    "test": "./node_modules/.bin/mocha test/ -R spec --compilers js:babel/register",
-    "cover": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha test/ -- -R spec --compilers js:babel/register",
-    "lint": "./node_modules/.bin/eslint src/",
-    "bundle": "./node_modules/.bin/browserify ./src/Particle.js -t babelify -o ./lib/ParticleBundle.js"
+    "compile": "babel --optional runtime -sd lib/ src/",
+    "test": "mocha test/ -R spec --compilers js:babel/register",
+    "cover": "istanbul cover ./node_modules/.bin/_mocha test/ -- -R spec --compilers js:babel/register",
+    "bundle": "browserify ./src/Particle.js -t babelify -o ./lib/ParticleBundle.js",
+    "lint": "eslint src/"
   },
   "repository": {
     "type": "git",
