--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/spark/particle-api-js"
   },
   "author": "Emily Rose <nexxy@particle.io>",
+  "contributors": [
+    "Justin Debbink"
+  ],
   "keywords": [
     "particle",
     "library",
