--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
-	"extends": "airbnb",
-	"rules": {
-		"indent": [2, "tab"],
-		"brace-style": [2, "stroustrup", { "allowSingleLine": true }]
+	"parser": "babel-eslint",
+	"extends": "particle",
+	"env": {
+		"es6": true,
+		"shared-node-browser": true
 	}
 }
