--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "lib/Particle.js",
   "scripts": {
     "prepublish": "npm run lint && npm run compile",
-    "compile": "babel --optional runtime -sd lib/ src/",
-    "test": "mocha test/ -R spec --compilers js:babel/register",
-    "cover": "istanbul cover ./node_modules/.bin/_mocha test/ -- -R spec --compilers js:babel/register",
-    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --compilers js:babel/register test/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "bundle": "browserify ./src/Particle.js -t babelify -o ./lib/ParticleBundle.js",
+    "compile": "babel src -sd lib",
+    "test": "mocha test/ -R spec --compilers js:babel-register",
+    "cover": "istanbul cover ./node_modules/.bin/_mocha test/ -- -R spec --compilers js:babel-register",
+    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --compilers js:babel-register test/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "lint": "eslint src/"
   },
   "repository": {
@@ -30,22 +29,20 @@
   ],
   "license": "LGPL-3.0",
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
-    "babelify": "^6.3.0",
-    "browserify": "^11.2.0",
+    "babel-cli": "^6.5.1",
+    "babel-eslint": "^5.0.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-register": "^6.5.2",
     "coveralls": "^2.11.4",
-    "eslint": "^1.5.0",
-    "eslint-config-airbnb": "0.0.8",
-    "eslint-plugin-react": "^3.4.1",
+    "eslint": "^2.1.0",
+    "eslint-config-particle": "^1.0.1",
     "istanbul": "^0.4.0",
     "mocha": "^2.3.3",
     "should": "^7.1.0",
     "sinon": "^1.17.0"
   },
   "dependencies": {
-    "path": "^0.12.7",
     "superagent": "^1.4.0",
-    "url": "^0.11.0"
+    "superagent-prefix": "0.0.2"
   }
 }
