--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,9 @@
 		"shared-node-browser": true
 	},
 	"rules": {
-		"no-var": 2
+		"no-var": 2,
+		"valid-jsdoc": [2, {
+			"requireReturnDescription": false
+		}]
 	}
 }
