--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cover": "istanbul cover ./node_modules/.bin/_mocha test/ -- -R spec --compilers js:babel-register",
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --compilers js:babel-register test/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "lint": "eslint src/",
-    "docs": "documentation build src/Particle.js --shallow -g -f md -o docs/api.md"
+    "docs": "documentation build src/Particle.js --shallow -g -f md -o docs/api.md",
+    "build": "browserify lib/Particle.js -s Particle -d -p [minifyify --map particle.min.js.map --output dist/particle.min.js.map] > dist/particle.min.js"
   },
   "repository": {
     "type": "git",
@@ -35,11 +36,13 @@
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-register": "^6.5.2",
+    "browserify": "^13.0.0",
     "coveralls": "^2.11.4",
     "documentation": "^4.0.0-beta",
     "eslint": "^2.1.0",
     "eslint-config-particle": "^1.0.2",
     "istanbul": "^0.4.0",
+    "minifyify": "^7.3.1",
     "mocha": "^2.3.3",
     "should": "^7.1.0",
     "sinon": "^1.17.0"
