--- a/package.json
+++ b/package.json
@@ -49,7 +49,12 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.5.0",
+    "stream-http": "^2.1.1",
     "superagent": "^1.4.0",
     "superagent-prefix": "0.0.2"
+  },
+  "browser": {
+    "http": "stream-http",
+    "https": "stream-http"
   }
 }
