Use stream-http fork that prevents usage of fetch so we can abort

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.5.0",
-    "stream-http": "^2.1.1",
+    "stream-http": "spark/stream-http#v2.2.1",
     "superagent": "^1.4.0",
     "superagent-prefix": "0.0.2"
   },
