--- a/package.json
+++ b/package.json
@@ -32,21 +32,24 @@
   ],
   "license": "Apache-2.0",
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-eslint": "^5.0.0",
+    "babel-cli": "^6.9.0",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.5.2",
     "browserify": "^13.0.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "coveralls": "^2.11.4",
     "documentation": "^4.0.0-beta",
-    "eslint": "~2.2.0",
-    "eslint-config-particle": "^1.0.2",
-    "istanbul": "^0.4.0",
+    "eslint": "^2.3.0",
+    "eslint-config-particle": "^1.0.5",
+    "istanbul": "1.0.0-alpha.2",
     "minifyify": "^7.3.1",
-    "mocha": "^2.3.3",
+    "mocha": "^2.5.1",
     "should": "^9.0.0",
-    "sinon": "^1.17.0"
+    "sinon": "^1.17.4",
+    "sinon-chai": "^2.8.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.5.0",
