--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ install:
   - npm -g install npm@latest
   - npm install
   - npm prune
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start" # Load display for browser tests
+  - sleep 3 # give xvfb some time to start
 after_success:
   - npm run coveralls
