--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "prepublish": "npm run lint && npm run compile",
     "compile": "babel src -sd lib",
     "test": "mocha test/ -R spec --compilers js:babel-register",
+    "test:browser": "karma start",
     "test:watch": "npm run test -- --watch",
     "cover": "istanbul cover ./node_modules/.bin/_mocha test/ -- -R spec --compilers js:babel-register",
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --compilers js:babel-register test/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
@@ -35,6 +36,7 @@
     "babel-cli": "^6.9.0",
     "babel-eslint": "^6.0.4",
     "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.5.2",
     "browserify": "^13.0.0",
@@ -45,6 +47,12 @@
     "eslint": "^2.3.0",
     "eslint-config-particle": "^1.0.5",
     "istanbul": "1.0.0-alpha.2",
+    "karma": "^1.1.1",
+    "karma-chai": "^0.1.0",
+    "karma-cli": "^1.0.1",
+    "karma-coverage": "^1.1.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.1.1",
     "minifyify": "^7.3.1",
     "mocha": "^2.5.1",
     "should": "^9.0.0",
@@ -52,10 +60,9 @@
     "sinon-chai": "^2.8.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.5.0",
+    "babel-runtime": "^6.9.2",
     "stream-http": "spark/stream-http#v2.2.1",
     "superagent": "^1.4.0",
-    "superagent-binary-parser": "^1.0.0",
     "superagent-prefix": "0.0.2"
   },
   "browser": {
