--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.5.2",
+    "babelify": "^7.3.0",
+    "brfs": "^1.4.3",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
@@ -48,6 +50,7 @@
     "eslint-config-particle": "^1.0.5",
     "istanbul": "1.0.0-alpha.2",
     "karma": "^1.1.1",
+    "karma-browserify": "^5.1.0",
     "karma-chai": "^0.1.0",
     "karma-cli": "^1.0.1",
     "karma-coverage": "^1.1.0",
@@ -57,7 +60,8 @@
     "mocha": "^2.5.1",
     "should": "^9.0.0",
     "sinon": "^1.17.4",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "babel-runtime": "^6.9.2",
