--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "particle-api-js",
   "version": "5.3.0",
   "description": "Particle API Client",
-  "main": "lib/Particle.js",
+  "main": "lib",
   "scripts": {
     "prepublish": "npm run lint && npm run compile",
     "compile": "babel src -sd lib",
