--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "particle-api-js",
-  "version": "5.3.1",
+  "version": "5.3.0-develop.1",
   "description": "Particle API Client",
   "main": "lib/index.js",
   "scripts": {
