--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --compilers js:babel-register test/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "lint": "eslint src/",
     "docs": "documentation build src/Particle.js --shallow -g -f md -o docs/api.md",
-    "build": "browserify lib/Particle.js -s Particle -d -p [minifyify --map particle.min.js.map --output dist/particle.min.js.map] > dist/particle.min.js"
+    "build": "browserify lib/Particle.js -s Particle -d -p [minifyify --map particle.min.js.map --output dist/particle.min.js.map] > dist/particle.min.js",
+    "version": "npm run test && npm run prepublish && npm run build && npm run docs && git add dist/* && bash -c 'read -p \"Update CHANGELOG.md and press ENTER when done.\"' && git add CHANGELOG.md"
   },
   "repository": {
     "type": "git",
