Support nested directories when compiling sources

--- a/package.json
+++ b/package.json
@@ -68,8 +68,9 @@
   },
   "dependencies": {
     "babel-runtime": "^6.9.2",
+    "form-data": "https://github.com/spark/form-data/archive/v1.0.0-relative-path.tar.gz",
     "stream-http": "spark/stream-http#v2.2.1",
-    "superagent": "^2.1.0",
+    "superagent": "^2.2.0",
     "superagent-prefix": "0.0.2"
   },
   "browser": {
