--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "particle-api-js",
-  "version": "6.0.2",
+  "version": "6.0.3",
   "description": "Particle API Client",
   "main": "lib/Particle.js",
   "scripts": {
@@ -48,7 +48,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "coveralls": "^2.11.4",
-    "documentation": "^4.0.0-beta",
+    "documentation": "^4.0.0-beta10",
     "eslint": "^2.3.0",
     "eslint-config-particle": "^1.0.5",
     "istanbul": "1.0.0-alpha.2",
