Update release script

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "docs": "documentation build src/Particle.js --shallow -g -f md -o docs/api.md",
     "build": "browserify lib/Particle.js -s Particle -d -p [minifyify --map particle.min.js.map --output dist/particle.min.js.map] > dist/particle.min.js",
     "preversion": "npm run test && npm run prepublish",
-    "version": "npm run build && npm run docs && bash -c 'read -p \"Update CHANGELOG.md and press ENTER when done.\"' && git add dist/* docs/* CHANGELOG.md"
+    "version": "npm run build && npm run docs && npm run update-changelog && git add dist/* docs/*",
+    "update-changelog": "VERSION=`node -p -e \"require('./package.json').version\"` bash -c 'read -p \"Update CHANGELOG.md for version $VERSION and press ENTER when done.\"' && git add CHANGELOG.md"
   },
   "repository": {
     "type": "git",
