library publish wip

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "mocha": "^2.5.1",
     "should": "^9.0.0",
     "sinon": "^1.17.4",
+    "sinon-as-promised": "^4.0.2",
     "sinon-chai": "^2.8.0",
     "watchify": "^3.7.0"
   },
