--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "Justin Debbink",
     "Matthew McGowan",
     "Julien Vanier",
-    "Wojtek Siudzinski"
+    "Wojtek Siudzinski",
+    "Emily Rose"
   ],
   "keywords": [
     "particle",
