uses unix style linting for easier integration with IDEs

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:watch": "npm run test -- --watch",
     "cover": "istanbul cover ./node_modules/.bin/_mocha test/ -- -R spec --compilers js:babel-register",
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --compilers js:babel-register test/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
-    "lint": "eslint src/",
+    "lint": "eslint -f unix src/",
+    "lint:fix": "eslint --fix -f unix src/",
     "docs": "documentation build src/Particle.js --shallow -g -f md -o docs/api.md",
     "build": "browserify lib/Particle.js -s Particle -d -p [minifyify --map particle.min.js.map --output dist/particle.min.js.map] > dist/particle.min.js",
     "preversion": "npm run test && npm run prepublish",
