--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "coveralls": "^2.11.4",
-    "documentation": "^4.0.0-beta10",
+    "documentation": "^4.0.0-rc.1",
     "eslint": "^2.3.0",
     "eslint-config-particle": "^1.0.5",
     "istanbul": "1.0.0-alpha.2",
