--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.9.2",
-    "form-data": "https://github.com/spark/form-data/archive/v1.0.0-relativepath.2.tar.gz",
+    "form-data": "https://github.com/spark/form-data/archive/v1.0.0-rc4.tar.gz",
     "stream-http": "https://github.com/spark/stream-http/archive/v2.2.1.tar.gz",
     "superagent": "^2.2.0",
     "superagent-prefix": "0.0.2"
