--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,19 @@
 language: node_js
 node_js:
 - 4
-- 5
 - 6
-- 7
 - 8
+- 10
 matrix:
   include:
-  - node_js: 6
+  - node_js: 8
     env: TEST_SUITE=browser
 cache:
   directories:
   - node_modules
 sudo: false
 install:
-- npm -g install npm@latest
+- npm -g install npm@5.10
 - npm install
 - npm prune
 script: "./travis_tests.sh"
