--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.9.2",
-    "stream-http": "https://github.com/particle-iot/stream-http/archive/v2.2.1.tar.gz",
+    "stream-http": "^3.0.0",
     "form-data": ">2.2.0",
     "superagent": "^3.6.0",
     "superagent-prefix": "0.0.2"
