--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,9 @@
 		"es6": true,
 		"shared-node-browser": true
 	},
+	"globals": {
+		"navigator": "readonly"
+	},
 	"rules": {
 		"no-var": 2,
 		"valid-jsdoc": [2, {
