--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "babel-watch": "babel src -d lib --watch --source-maps",
     "prepublish": "npm run lint && npm run compile",
     "compile": "babel src -sd lib",
-    "test": "mocha test/ -R spec --compilers js:babel-register",
+    "test": "npm run lint && npm run test:node",
+    "test:node": "mocha test/ -R spec --compilers js:babel-register",
     "test:browser": "karma start --single-run",
-    "test:watch": "npm run test -- --watch",
+    "test:watch": "npm run test:node -- --watch",
     "cover": "istanbul cover ./node_modules/.bin/_mocha test/ -- -R spec --compilers js:babel-register",
     "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec --compilers js:babel-register test/ && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "lint": "eslint . --ext .js --format unix --ignore-path .gitignore --ignore-pattern \"dist/*\"",
