--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   "dependencies": {
     "babel-runtime": "^6.9.2",
     "form-data": ">2.2.0",
-    "stream-http": "https://github.com/particle-iot/stream-http/archive/v2.2.1.tar.gz",
+    "stream-http": "^3.2.0",
     "superagent": "^5.1.2",
     "superagent-prefix": "0.0.2"
   },
