--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,15 @@
 version: 2.1
 
+orbs:
+  browser-tools: circleci/browser-tools@1.1.0
+
 jobs:
   run-tests:
     parameters:
       node-version:
         type: string
     docker:
-      - image: cimg/node:<< parameters.node-version >> # Primary execution image
+      - image: cimg/node:<< parameters.node-version >>-browsers # Primary execution image
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
@@ -15,6 +18,7 @@ jobs:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
     steps:
+      - browser-tools/install-browser-tools
       - checkout
       - run:
           name: NPM install
@@ -23,8 +27,8 @@ jobs:
           name: Run linting
           command: npm run lint
       - run:
-          name: Run tests with coverage
-          command: npm run coverage
+          name: Run tests with browser
+          command: npm run test:browser
       - store_artifacts:
           path: coverage
   publish-npm:
