--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "dependencies": {
     "babel-runtime": "^6.9.2",
     "form-data": ">2.2.0",
+    "node-fetch": "^2.7.0",
     "stream-http": "^3.2.0",
     "superagent": "^5.1.2",
     "superagent-prefix": "0.0.2"
