--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,9 @@ jobs:
           condition:
             equal: ["16.20.0", << parameters.node-version >>]
           steps:
-            - browser-tools/install-browser-tools
+            - browser-tools/install-browser-tools:
+                # Workaround for circleCI automatically targeting unstalbe build https://github.com/CircleCI-Public/browser-tools-orb/issues/90
+                chrome-version: 116.0.5845.96 # TODO: remove when chromedriver downloads are fixed
             - run:
                 name: Run tests with browser
                 command: npm run test:browser
