--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.9.2",
-    "form-data": ">2.2.0",
+    "form-data": "^4.0.0",
     "node-fetch": "^2.7.0",
     "stream-http": "^3.2.0"
   },
