--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "babel-runtime": "^6.9.2",
     "form-data": "^4.0.0",
     "node-fetch": "^2.7.0",
@@ -84,7 +83,7 @@
     "stream-http": "^3.2.0"
   },
   "browser": {
-    "./fs-shim": "./fs-shim-browser",
+    "fs": false,
     "http": "stream-http",
     "https": "stream-http"
   },
