--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "stream-http": "^3.2.0"
   },
   "browser": {
-    "fs": false,
+    "./fs": false,
     "http": "stream-http",
     "https": "stream-http"
   },
