--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "typescript": "^5.2.2",
     "watchify": "^3.7.0",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "babel-runtime": "^6.9.2",
