--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Particle API Client",
   "main": "lib/Particle.js",
   "scripts": {
-    "babel-watch": "babel src -d lib --watch --source-maps",
-    "prepublish": "npm run lint && npm run compile",
-    "compile": "babel src -sd lib",
+    "prepublish": "npm run lint && npm run build",
     "test": "npm run lint && npm run typecheck && npm run test:unit",
     "test:ci": "npm run lint && npm run test:unit -- --forbid-only && npm run coverage",
     "test:unit": "mocha test/ -R spec --compilers js:babel-register",
@@ -48,13 +46,6 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/node": "^20.5.9",
-    "babel-cli": "^6.9.0",
-    "babel-eslint": "^6.0.4",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.5.2",
-    "babelify": "^7.3.0",
     "brfs": "^1.4.3",
     "browserify": "^13.0.0",
     "chai": "^4.3.6",
@@ -83,7 +74,6 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.9.2",
     "form-data": "^4.0.0",
     "node-fetch": "^2.7.0",
     "qs": "^6.11.2",
