--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "karma-coverage": "^1.1.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.1.1",
+    "karma-webpack": "^5.0.0",
     "minifyify": "^7.3.1",
     "mocha": "^2.5.1",
     "nyc": "^15.1.0",
