run tests using webpack

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "particle-api-js",
   "version": "10.0.0",
   "description": "Particle API Client",
-  "main": "lib/Particle.js",
+  "main": "src/Particle.js",
   "scripts": {
     "prepublish": "npm run lint && npm run build",
     "test": "npm run lint && npm run typecheck && npm run test:unit",
     "test:ci": "npm run lint && npm run test:unit -- --forbid-only && npm run coverage",
-    "test:unit": "mocha test/ -R spec --compilers js:babel-register",
+    "test:unit": "mocha test/ -R spec",
     "test:unit:silent": "npm run test:unit > tmp/test-unit-log.txt 2>&1",
     "test:browser": "karma start --single-run",
     "test:watch": "npm run test:unit -- --watch",
@@ -16,8 +16,8 @@
     "lint": "eslint . --ext .js --format unix --ignore-path .gitignore --ignore-pattern \"dist/*\"",
     "lint:fix": "npm run lint -- --fix",
     "docs": "documentation build src/Particle.js --shallow -g -f md -o docs/api.md",
-    "build": "browserify lib/Particle.js -s Particle -d -p [minifyify --map particle.min.js.map --output dist/particle.min.js.map] > dist/particle.min.js",
-    "build-nomin": "browserify lib/Particle.js -s Particle > dist/particle.js",
+    "build": "webpack",
+    "build-nomin": "webpack",
     "preversion": "npm run test && npm run prepublish",
     "reinstall": "rm -rf ./node_modules && npm i",
     "version": "npm run build && npm run docs && npm run update-changelog && git add dist/* docs/*",
