update build commands

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "lint": "eslint . --ext .js --format unix --ignore-path .gitignore --ignore-pattern \"dist/*\"",
     "lint:fix": "npm run lint -- --fix",
     "docs": "documentation build src/Particle.js --shallow -g -f md -o docs/api.md",
-    "build": "webpack",
-    "build-nomin": "webpack",
+    "build": "webpack --env mode=production",
+    "build-nomin": "webpack --env mode=development",
     "preversion": "npm run test && npm run prepublish",
     "reinstall": "rm -rf ./node_modules && npm i",
     "version": "npm run build && npm run docs && npm run update-changelog && git add dist/* docs/*",
