--- a/package.json
+++ b/package.json
@@ -70,10 +70,13 @@
     "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "events": "^3.3.0",
     "form-data": "^4.0.0",
     "node-fetch": "^2.7.0",
     "qs": "^6.11.2",
-    "stream-http": "^3.2.0"
+    "stream-http": "^3.2.0",
+    "url": "^0.11.3"
   },
   "browser": {
     "./fs": false,
