--- a/package.json
+++ b/package.json
@@ -66,8 +66,7 @@
     "terser-webpack-plugin": "^5.3.9",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "buffer": "^6.0.3",
