--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Particle API Client",
   "main": "src/Particle.js",
   "scripts": {
-    "prepublish": "npm run lint && npm run build",
+    "prepare": "npm run lint && npm run build",
     "test": "npm run lint && npm run typecheck && npm run test:unit",
     "test:ci": "npm run lint && npm run test:unit -- --forbid-only && npm run coverage",
     "test:unit": "mocha test/ -R spec",
