--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "strict": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "noEmit": true
   },
   "types": ["node"],
   "include": [ "src" ],
