--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,20 @@ orbs:
   browser-tools: circleci/browser-tools@2.2.0
 
 jobs:
+  lint:
+    docker:
+      - image: cimg/node:22.18 # eslint 9.x requires 18+, so we've separated it from the test step
+        auth:
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_PASSWORD
+    steps:
+      - checkout
+      - run:
+          name: NPM install
+          command: npm ci
+      - run:
+          name: Lint
+          command: npm run lint
   run-tests:
     parameters:
       node-version:
@@ -57,6 +71,13 @@ workflows:
   version: 2
   test-and-publish:
     jobs:
+      - lint:
+          context:
+            - particle-ci-private
+          # run tests for all branches
+          filters:
+            branches:
+              only: /.*/
       - run-tests:
           context:
             - particle-ci-private
@@ -71,6 +92,7 @@ workflows:
               only: /.*/
       - publish-npm:
           requires:
+            - lint
             - run-tests
           context:
             - particle-ci-private
