--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prepare": "npm run lint && npm run build",
     "test": "npm run lint && npm run typecheck && npm run test:unit",
-    "test:ci": "npm run lint && npm run test:unit -- --forbid-only && npm run coverage",
+    "test:ci": "npm run test:unit -- --forbid-only && npm run coverage",
     "test:unit": "mocha test/ -R spec",
     "test:unit:silent": "npm run test:unit > tmp/test-unit-log.txt 2>&1",
     "test:browser": "karma start --single-run",
