--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ workflows:
             - particle-ci-private
           matrix:
             parameters:
-              node-version: ["12.22.12", "16.20.0", "22.18"]
+              node-version: ["16.20.0", "22.18"]
           # run tests for all branches and tags
           filters:
             tags:
